--- a/scss/style/style.scss
+++ b/scss/style/style.scss
@@ -169,6 +169,7 @@
     #header__area header h2 {display:none;}
 
 	#sidebar {display:none;}
+    .point__detail--wrap {display:none;}
 	.width_fix {width:100%;}
 	#content {width:100%; float:none; margin:100px 0 0;}
     #content .title {margin:0;}
