--- a/scss/style/style.scss
+++ b/scss/style/style.scss
@@ -22,7 +22,7 @@
 .slide_guide.on + #slide_wrap {margin-top:5px;}
 .slide_guide {display:none; position:relative; margin:30px 0 15px;}
 .slide_guide.on {display:block;}
-.slide_guide .ico_guide {display:inline-block; width:30px; height:32px; text-indent:100%; white-space:nowrap; overflow:hidden; background:url(https://heodokyung.github.io/portfolio/img/scroll_guide.png) no-repeat 0 0; vertical-align:middle;}
+.swiper__guide {display:inline-block; width:30px; height:32px; text-indent:100%; white-space:nowrap; overflow:hidden; background:url(https://heodokyung.github.io/portfolio/img/scroll_guide.png) no-repeat 0 0; vertical-align:middle;}
 .slide_guide .slide_count {display:inline-block; margin-left:10px; font-size:14px; vertical-align:middle;  font-family:"notoSansB";}
 .slide_guide .slide_count .page_num {color:#000;}
 .slide_guide .slide_count .page_total {color:#888;}
