--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -101,18 +101,18 @@ span.ico.new {color:#b6ff00;}
 .skill__list li .back {display:flex; align-items: center; transform: rotateY(180deg); padding: 30px; background: #eee; color: #222; font-size: 14px; word-break: keep-all;}
 .skill__list li .front p {position:absolute; top:130px; left:0; right:0; text-align:center; width:100%;}
 
-.skill__list li:nth-of-type(1) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list1.png);}
-.skill__list li:nth-of-type(2) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list2.png);}
-.skill__list li:nth-of-type(3) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list3.png);}
-.skill__list li:nth-of-type(4) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list4.png);}
-.skill__list li:nth-of-type(5) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list5.png);}
-.skill__list li:nth-of-type(6) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list6.png);}
-.skill__list li:nth-of-type(7) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list7.png);}
-.skill__list li:nth-of-type(8) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list8.png);}
-.skill__list li:nth-of-type(9) .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list9.png);}
-.skill__list li:nth-of-type(10) .front::before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list10.png);}
-.skill__list li:nth-of-type(11) .front::before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list11.png);}
-.skill__list li:nth-of-type(12) .front::before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list12.png);}
+.skill__list li.html .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list1.png);}
+.skill__list li.script .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list2.png);}
+.skill__list li.jquery .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list3.png);}
+.skill__list li.vue .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list4.png);}
+.skill__list li.sass .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list5.png);}
+.skill__list li.zeplin .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list6.png);}
+.skill__list li.jira .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list7.png);}
+.skill__list li.wiki .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list8.png);}
+.skill__list li.redmine .front:before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list9.png);}
+.skill__list li.git .front::before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list10.png);}
+.skill__list li.sublime .front::before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list11.png);}
+.skill__list li.slack .front::before {background-image:url(https://heodokyung.github.io/portfolio/img/main/ico_skill_list12.png);}
 
 /* Work info */
 .step--list__guide > ul {position:relative;}
